--- a/public/contraseña.html
+++ b/public/contraseña.html
@@ -22,12 +22,12 @@
 <!-- Header -->
 <header class="encabezado-principal">
   <nav class="barra-navegacion">
-    <a class="logo" href="ColdChain.html">
+    <a class="logo" href="index.html">
       <img alt="Logo ColdChain" src="assets/images/Coldchain.png"/>
       <span>ColdChain</span>
     </a>
     <ul class="menu-navegacion">
-      <li><a href="ColdChain.html">Inicio</a></li>
+      <li><a href="index.html">Inicio</a></li>
       <li><a href="login.html">Iniciar Sesión</a></li>
     </ul>
   </nav>
