--- a/public/detalle_equipo.html
+++ b/public/detalle_equipo.html
@@ -22,7 +22,7 @@
 <body>
 <header class="encabezado-principal">
   <nav class="barra-navegacion">
-    <a class="logo" href="ColdChain.html">
+    <a class="logo" href="index.html">
       <img alt="Logo ColdChain" src="assets/images/Coldchain.png"/>
       <span>ColdChain</span>
     </a>
