--- a/public/generar_equipo.html
+++ b/public/generar_equipo.html
@@ -21,7 +21,7 @@
 <body>
 <header class="encabezado-principal">
   <nav class="barra-navegacion">
-    <a class="logo" href="ColdChain.html">
+    <a class="logo" href="index.html">
       <img alt="Logo ColdChain" src="assets/images/Coldchain.png"/>
       <span>ColdChain</span>
     </a>
@@ -40,8 +40,7 @@
         <!-- Nombre -->
         <div class="campo-form">
           <label>Nombre del Equipo</label>
-          <input
-            class="input-estandar"
+          <input class="input-estandar"
             id="nombreEq"
             placeholder="Ej: Cámara Fría B4"
             required
